--- a/index.css
+++ b/index.css
@@ -30,8 +30,32 @@ header {
 main {
   flex: 1;
   display: flex;
+  flex-direction: column;
+  gap: 10px;
   align-items: center;
   justify-content: center;
+}
+#textarea {
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  padding: 20px;
+  background-color: white;
+  color: black;
+  font-size: 1.6rem;
+  font-weight: bold;
+  resize: none;
+  width: 400px;
+  height: auto;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
+}
+#counter-container {
+  display: flex;
+  width: 400px;
+  justify-content: space-between;
+  color: black;
+  font-size: 1.3rem;
+  font-style: italic;
 }
 footer {
   font-size: 1.4rem;
