--- a/index.css
+++ b/index.css
@@ -40,6 +40,7 @@ main {
   border: none;
   outline: none;
   padding: 20px;
+  margin: 0px 10px;
   background-color: white;
   color: black;
   font-size: 1.6rem;
@@ -55,6 +56,7 @@ main {
   justify-content: space-between;
   font-size: 1.3rem;
   font-style: italic;
+  margin: 0px 10px;
 }
 #counter-container p {
   color: hsla(0, 0%, 0%, 0.6);
@@ -68,4 +70,13 @@ main {
 footer {
   font-size: 1.4rem;
   font-weight: bold;
+}
+
+@media screen and (max-width: 400px) {
+  #counter-container {
+    width: 90%;
+  }
+  #textarea {
+    width: 90%;
+  }
 }
